<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="preference_sort"
        android:icon="@drawable/ic_baseline_sort"
        android:entries="@array/entries"
        android:entryValues="@array/entriesValues"
        android:defaultValue="@string/pref_price_def_value"
        android:title="@string/pref_title_sort">
    </ListPreference>
    <ListPreference
        android:key="preference_filter"
        android:icon="@drawable/ic_baseline_filter"
        android:entries="@array/filterEntries"
        android:entryValues="@array/filterEntriesValues"
        android:defaultValue="@string/pref_title_def_value"
        android:title="@string/pref_title_filter">
    </ListPreference>
    <SwitchPreference
        android:icon="@drawable/ic_baseline_done"
        android:switchTextOff="@string/pref_database_switch_text_off"
        android:switchTextOn="@string/pref_database_switch_text_on"
        android:summaryOff="@string/pref_database_text_summary_off"
        android:summaryOn="@string/pref_database_text_summary_on"
        android:key="database"
        android:title="@string/pref_title_database">
    </SwitchPreference>
</PreferenceScreen>